--- a/package.json
+++ b/package.json
@@ -14,31 +14,35 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/pwa": "^2.6.0",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
     "express": "^4.16.4",
-    "@nuxtjs/pwa": "^2.6.0"
+    "helmet": "^3.18.0",
+    "morgan": "^1.9.1",
+    "nuxt": "^2.4.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "autoprefixer": "^8.6.4",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
     "eslint": "^5.15.1",
     "eslint-config-standard": ">=12.0.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-import": ">=2.16.0",
     "eslint-plugin-jest": ">=22.3.0",
     "eslint-plugin-node": ">=8.0.1",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
-    "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
-    "autoprefixer": "^8.6.4",
-    "tailwindcss": "^0.7.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "nodemon": "^1.18.9",
+    "tailwindcss": "^0.7.0",
     "vue-jest": "^3.0.3"
   }
 }
